# LeanGLAD

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Shader.cpp  Shader.h  main.cpp
Shaders/: FragmentShader.SHADER  VertexShader.SHADER
glad/: glad.c
